# revm

./: BENCHMARK_COMPARISON.md  Cargo.toml
crates/: revm_ffi.h
crates/revm-ffi/: CONFIGURATION_SUMMARY.md  Cargo.toml  README.md  revm_ffi.h
crates/revm-ffi/examples/benchmark_bsc_call_evm/: benchmark.go  correct_bytecode.txt  go.mod  go.sum
crates/revm-ffi/examples/benchmark_bsc_call_ffi/: benchmark  benchmark.go  helper.sol  minimal_erc20.sol  simple_erc20.sol
crates/revm-ffi/examples/benchmark_pure_revm/: BENCHMARK_RESULTS.md  Cargo.toml
crates/revm-ffi/examples/benchmark_pure_revm/src/: main.rs
crates/revm-ffi/examples/bsc-call-ffi/: EXAMPLE_OUTPUT.md  README.md  README_CONFIG.md  build.sh  config_demo.go  go.mod  go.sum  main.go
crates/revm-ffi/examples/go/: build.sh  go.mod  main.go
crates/revm-ffi/examples1/: BENCHMARK_RESULTS.md  shared_config.toml.backup
crates/revm-ffi/examples1/benchmark_go_call_ffi/: main.go
crates/revm-ffi/examples1/benchmark_pure_revm/contracts/: BIGA.sol
crates/revm-ffi/examples1/benchmark_pure_revm/src/: main.rs
crates/revm-ffi/examples1/contracts/: BIGA.sol
crates/revm-ffi/src/: lib.rs  types.rs  utils.rs
examples/block_traces/src/: main.rs
examples/erc20_transfer/: Cargo.toml
examples/erc20_transfer/src/: main.rs
