[package]
name = "revm-ffi"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "FFI bindings for REVM"

[lib]
name = "revm_ffi"
crate-type = ["cdylib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { path = "../revm" }
anyhow = "1.0"
hex = "0.4"

[features]
default = [] 